--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -1,10 +1,13 @@
 .product-card {
   width: 300px;
   height: 100%;
-  //   object-fit: cover;
   cursor: pointer;
   transition: 0.3s;
-  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
 
   &:hover {
     transform: scale(1.05);
@@ -13,5 +16,10 @@
 
   img {
     width: 100%;
+    object-fit: cover;
+  }
+
+  p h4 {
+    text-decoration: none;
   }
 }
