--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -1,7 +1,6 @@
 .cart-items {
   display: flex;
   justify-content: center;
-  font-weight: bold;
   width: 100vw;
 
   img {
@@ -12,9 +11,15 @@
 .single-cart-item {
   width: 700px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   text-align: center;
   gap: 50px;
   margin-bottom: 50px;
+}
+
+.total-price {
+  text-align: center;
+  font-size: 18px;
+  font-weight: bold;
 }
