--- a/src/components/ProductDetail/ProductDetail.scss
+++ b/src/components/ProductDetail/ProductDetail.scss
@@ -1,12 +1,13 @@
 .product-container {
   display: flex;
-
-  height: 100vh;
+  max-width: 100%;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
+  padding: 20px;
 
   img {
-    max-height: 600px;
+    max-width: 100%;
   }
 }
 
@@ -29,5 +30,19 @@
       transition: 0.2s;
       background-color: #68646c;
     }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .product-container {
+    display: flex;
+    flex-direction: column;
+  }
+  .product-right {
+    max-width: 100%;
+    margin: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
