--- a/src/components/ProductListing/ProductListing.scss
+++ b/src/components/ProductListing/ProductListing.scss
@@ -6,3 +6,9 @@
   gap: 16px;
   margin-top: 50px;
 }
+
+@media only screen and (max-width: 600px) {
+  .products-wrapper {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
