--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -6,6 +6,24 @@
   img {
     max-height: 100px;
   }
+
+  button {
+    height: 20px;
+    width: 20px;
+    color: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    font-size: 20px;
+    border: none;
+    font-weight: bold;
+
+    &:hover {
+      transition: 0.3s;
+      font-size: 23px;
+    }
+  }
 }
 
 .single-cart-item {
