--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -18,6 +18,7 @@
     font-size: 20px;
     border: none;
     font-weight: bold;
+    background-color: white;
 
     &:hover {
       transition: 0.3s;
